2010-03-03  Darin Fisher  <darin@chromium.org>

Reviewed by Mark Rowe.

        Page should not care about Chromium plug-in implementation details
        https://bugs.webkit.org/show_bug.cgi?id=35623

        * WebCore.gypi: Compile PluginViewNone.cpp
        * page/Page.cpp:
        (WebCore::Page::privateBrowsingStateChanged): Remove conditional
        compilation for PLATFORM(CHROMIUM).



git-svn-id: svn://svn.chromium.org/blink/trunk@55486 bbb929c8-8fbe-4397-9dbb-9b2b20218538